--- a/src/gwt/dmassist-gwt/war/Dmassist_gwt.css
+++ b/src/gwt/dmassist-gwt/war/Dmassist_gwt.css
@@ -45,6 +45,14 @@ body {
     background-color: #FFFFFF;
 }	
 
+.positive {
+}
+
+.nonpositive {
+    font-weight: bold;
+	color: #0000FF;
+}
+
 /** Example rules used by the template application (remove for your app) */
 h1 {
   font-size: 2em;
