--- a/src/android/res/layout/add_creature.xml
+++ b/src/android/res/layout/add_creature.xml
@@ -119,7 +119,15 @@
                     android:layout_weight="1"
                     android:textColor="#111111" />
                 <Button
-                    android:id="@+id/addDone"
+                    android:id="@+id/cancel"
+                    android:text="@string/cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:gravity="right"
+                    android:textColor="#111111" />
+                <Button
+                    android:id="@+id/done"
                     android:text="@string/add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
