--- a/src/android/res/layout/edit_entity.xml
+++ b/src/android/res/layout/edit_entity.xml
@@ -29,36 +29,28 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
         >
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-        >
-            <Button
-                android:id="@+id/button_damage_heal"
-                android:text="@string/damage"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:gravity="right"
-                android:textColor="#111111" />
-            <Button
-                android:id="@+id/button_subdue_unsubdue"
-                android:text="@string/subdue_unsubdue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:gravity="right"
-                android:textColor="#111111" />
-            <Button
-                android:id="@+id/button_remove"
-                android:text="@string/remove_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:gravity="right"
-                android:textColor="#111111" />
+            >
+                <Button
+                    android:id="@+id/button_damage_heal"
+                    android:text="@string/damage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:gravity="right"
+                    android:textColor="#111111" />
+                <Button
+                    android:id="@+id/button_subdue_unsubdue"
+                    android:text="@string/subdue_unsubdue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:gravity="right"
+                    android:textColor="#111111" />
 
-        </LinearLayout>
+            </LinearLayout>
             <TableLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
@@ -157,6 +149,22 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
             >
+                <Button
+                    android:id="@+id/button_remove"
+                    android:text="@string/remove_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:gravity="right"
+                    android:textColor="#111111" />
+                <Button
+                    android:id="@+id/button_save"
+                    android:text="@string/save_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:gravity="right"
+                    android:textColor="#111111" />
                 <TextView
                     android:text=""
                     android:layout_width="wrap_content"
