--- a/src/android/res/layout/initiative_item_row.xml
+++ b/src/android/res/layout/initiative_item_row.xml
@@ -4,16 +4,40 @@
 	android:layout_height="fill_parent" android:layout_gravity="fill"
 	android:layout_weight="1" android:textColor="#111111" 
     android:background="#FFFFFF">
-	<TextView android:id="@+id/name"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:textSize="24sp" android:typeface="sans" android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:layout_gravity="fill" android:textColor="#111111" />
-	<!-- <init>|hp:|<hp>|sub:|<sub>|rounds:|<rounds> -->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+    >
+        <TextView
+            android:id="@+id/name"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="fill"
+            android:textColor="#111111" />
+        <TextView
+            android:id="@+id/abbrev"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill"
+            android:textColor="#111111" />
+    </LinearLayout>
+	<!-- init:|<init>|hp:|<hp>|sub:|<sub>|rounds:|<rounds> -->
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		android:orientation="horizontal" android:layout_width="fill_parent"
 		android:layout_height="fill_parent" android:layout_weight="1"
 		android:layout_gravity="fill" android:textColor="#111111">
+        <TextView android:text="init:"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:textSize="14sp" android:typeface="sans" android:layout_width="wrap_content"
+            android:layout_height="fill_parent" android:layout_weight="2"
+            android:textColor="#111111" />
 		<TextView android:id="@+id/init"
 			xmlns:android="http://schemas.android.com/apk/res/android"
 			android:textSize="14sp" android:typeface="sans" android:layout_width="24sp"
