--- a/src/android/res/layout/load_entity_row.xml
+++ b/src/android/res/layout/load_entity_row.xml
@@ -1,24 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
->
-    <CheckBox
-        android:id="@+id/checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
-    <TextView
+    <CheckedTextView
         android:id="@+id/name"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:textSize="24sp"
         android:typeface="sans"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="fill"
         android:textColor="#111111"
         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
          />
-</LinearLayout>
