--- a/src/android/res/layout/add_creature.xml
+++ b/src/android/res/layout/add_creature.xml
@@ -4,7 +4,6 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFFF"
     android:paddingBottom="8sp"
 >
     <TextView
@@ -13,22 +12,19 @@
         android:textSize="36sp"
         android:typeface="sans"
         android:gravity="center_horizontal"
-        android:text="Add Creature"
-        android:textColor="#111111" />
+        android:text="@string/add_creature"
+    />
     <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="8sp"
     >
         <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
         >
             <TableLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
@@ -39,7 +35,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/name"
                         android:textSize="18sp"
-                        android:textColor="#111111" />
+                    />
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -97,6 +93,18 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/subdual_edit"
                         android:layout_weight="1" />
+                </TableRow>
+                <TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/type"
+                        android:textSize="18sp"
+                        android:textColor="#111111" />
+                    <Spinner
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/type_edit" />
                 </TableRow>
             </TableLayout>
             <TextView
