--- a/src/android/res/layout/edit_entity.xml
+++ b/src/android/res/layout/edit_entity.xml
@@ -77,11 +77,22 @@
                         android:text="@string/init_roll"
                         android:textSize="18sp"
                         android:textColor="#111111" />
-                    <EditText
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/init_roll_edit"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                    >
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/init_roll_dice"
+                            android:layout_weight="1" />
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/init_roll_edit"
+                            android:layout_weight="1" />
+                    </LinearLayout>
                 </TableRow>
                 <TableRow>
                     <TextView
