Added hints for initiative input.  Added landscape version for add_effect.

--- a/src/android/res/layout/add_effect.xml
+++ b/src/android/res/layout/add_effect.xml
@@ -59,11 +59,13 @@
                         android:layout_weight="1"
                     >
                         <EditText
+                            android:hint="@string/init_dice_hint"                       
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/init_roll_dice"
                             android:layout_weight="1" />
                         <EditText
+                            android:hint="@string/init_roll_hint"                       
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/init_roll_edit"
