--- a/src/android/res/layout/add_creature.xml
+++ b/src/android/res/layout/add_creature.xml
@@ -1,58 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/edit_entity_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#FFFFFF"
     android:paddingBottom="8sp"
 >
     <TextView
-        android:id="@+id/edit_entity_title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="36sp"
         android:typeface="sans"
         android:gravity="center_horizontal"
-        android:text="Edit Creature or Effect"
-        android:textColor="#111111" />
+        android:text="@string/add_creature"
+    />
     <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="8sp"
     >
         <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
         >
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-            >
-                <Button
-                    android:id="@+id/button_damage_heal"
-                    android:text="@string/damage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-                <Button
-                    android:id="@+id/button_subdue_unsubdue"
-                    android:text="@string/subdue_unsubdue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-
-            </LinearLayout>
             <TableLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:stretchColumns="1"
@@ -63,7 +35,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/name"
                         android:textSize="18sp"
-                        android:textColor="#111111" />
+                    />
                     <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -77,24 +49,11 @@
                         android:text="@string/init_roll"
                         android:textSize="18sp"
                         android:textColor="#111111" />
-                    <LinearLayout
+                    <EditText
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                    >
-                        <EditText
-                            android:hint="@string/init_dice_hint"                       
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/init_dice_edit"
-                            android:layout_weight="1" />
-                        <EditText
-                            android:hint="@string/init_roll_hint"                       
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/init_roll_edit"
-                            android:layout_weight="1" />
-                    </LinearLayout>
+                        android:id="@+id/init_roll_edit"
+                        android:layout_weight="1" />
                 </TableRow>
                 <TableRow>
                     <TextView
@@ -139,19 +98,6 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/rounds"
-                        android:textSize="18sp"
-                        android:textColor="#111111" />
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/rounds_edit"
-                        android:layout_weight="1" />
-                </TableRow>
-                <TableRow>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
                         android:text="@string/type"
                         android:textSize="18sp"
                         android:textColor="#111111" />
@@ -174,22 +120,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
             >
-                <Button
-                    android:id="@+id/button_remove"
-                    android:text="@string/remove_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
-                <Button
-                    android:id="@+id/button_save"
-                    android:text="@string/save_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:gravity="right"
-                    android:textColor="#111111" />
                 <TextView
                     android:text=""
                     android:layout_width="wrap_content"
@@ -206,7 +136,7 @@
                     android:textColor="#111111" />
                 <Button
                     android:id="@+id/done"
-                    android:text="@string/ok"
+                    android:text="@string/add"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
