--- a/src/android/res/layout/add_effect.xml
+++ b/src/android/res/layout/add_effect.xml
@@ -62,7 +62,7 @@
                             android:hint="@string/init_dice_hint"                       
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:id="@+id/init_roll_dice"
+                            android:id="@+id/init_dice_edit"
                             android:layout_weight="1" />
                         <EditText
                             android:hint="@string/init_roll_hint"                       
